Sat May 17 16:29:35 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* examples/handcrafted/BasicSP/descriptors/test.dat
	* examples/handcrafted/BasicSP/BMClosedED/BMClosedED_exec.cpp
	* examples/handcrafted/BasicSP/BMDevice/BMDevice_exec.cpp
	* examples/handcrafted/BasicSP/BMDevice/BMDevice_exec.h
	* examples/handcrafted/BasicSP/BMDisplay/BMDisplay_exec.cpp
	* examples/handcrafted/BasicSP/EC/EC_exec.cpp
	* examples/handcrafted/BasicSP/EC/EC_svnt.cpp
	* examples/handcrafted/BasicSP/EC/controller.cpp: Now the demo
	  works! Fixed a few problems and made debug statements to be more
	  meaningful. Now that teh CIDL compiler is also ready, we are
	  ready to storm KSU :-)

Sat May 17 12:40:44 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* examples/handcrafted/BasicSP/BMDevice/BMDevice_svnt.cpp
	  (provide_facet): Added the implementation to resolve "data_read"
	  facet name.

Sat May 17 12:19:17 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* examples/handcrafted/BasicSP/descriptors/BasicSP.cad: Fixed yet
	  another typo. Thanks to Nanbor for pointing it out.

Sat May 17 12:07:47 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* examples/handcrafted/BasicSP/descriptors/BasicSP.cad: Fixed a
	  typo. Thanks to Nanbor for pointing it out.

	* examples/handcrafted/BasicSP/BasicSP.idl: Added ciao/ to the
	  CM_Container.idl

Sat May 17 11:18:22 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* examples/handcrafted/BasicSP/*/config: Config files for
	  testing.

Sat May 17 11:05:40 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* examples/handcrafted/BasicSP/BasicSP.idl: Changed to include
	  "CCM_Components.idl" directly instead of
	  "ciao/CCM_Components.idl".

	* examples/handcrafted/BasicSP/BasicSP.mpc: Removed BasicSPC.cpp
	  from the svnt library source file list since we are linking with
	  BasicSP stub library already.  Removed BasicSPES.cpp from the
	  source file list also because it's basically empty.
