@@ -2,7 +2,7 @@
 
 // ===========================================================
 //
-// @file BMClosedED.idl
+// @file BMClosedEDE.idl
 //
 // Generated based on $(CIAO_ROOT)/docs/templates/Executor.idl
 //
